# comet

./: .gitignore  404.html  CHANGELOG.md  MANIFEST.in  README.md  changelog  extra.css  foo.py  index.html  mkdocs.yml  mypy.ini  pyinstaller.spec  pyproject.toml  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflow/: python-package.yml
.github/workflows/: main.yml  mkdocs.yml  python-package.yml
comet/: __init__.py  application.py  buffer.py  channel.py  collection.py  component.py  dataseries.py  device.py  driver.py  emulator.py  estimate.py  event.py  filters.py  formatter.py  functions.py  logger.py  metric.py  mixins.py  parameter.py  process.py  resource.py  service.py  settings.py  transport.py  units.py  ureg.py  utilities.py  utils.py  version.py  worker.py
comet/devices/: __init__.py  cts.py  iec.py  scpi.py
comet/driver/: __init__.py  driver.py  functions.py  generic.py  iec60488.py  resource.py  tsp.py
comet/drivers/: iec.py
comet/emulator/: __init__.py  __main__.py  emulator.py  iec60488.py  tcpserver.py  tcpsocket.py  tsp.py  utils.py
comet/formatters/: __init__.py  csv.py  hephydb.py  json.py
comet/instruments/: __init__.py
comet/ui/: __init__.py  about.py  core.py  dialogs.py  fieldset.py  input.py  label.py  layout.py  mainwindow.py  metric.py  plot.py  preferences.py  scrollarea.py  table.py  tabs.py  tree.py  utils.py  widget.py
comet/widgets/: __init__.py  aboutdialog.py  application.py  lineplotwidget.py  lineplotwidget.ui  mainwindow.py  mainwindow.ui  models.py  plotwidget.py  preferencesdialog.py  preferencesdialog.ui  spinbox.py  uiloader.py
comet/writers/: __init__.py  csv.py  hephydb.py
docs/: _config.yml  application.md  devices.md  drivers.md  emulation.md  emulators.md  helpers.md  index.md  processes.md  settings.md  station.md  ui.md
docs/source/: conf.py  index.rst
drivers/: index.html
emulators/: index.html
examples/: driver_example.py  plot_example.py  process_example.py  resource_example.py  simple_example.py  ui_example.py
examples/demo/: demo.py  demo.ui
examples/plot/: app.py  plot.py  plot.ui
examples/simple/: app.py  dashboard.ui  main.py  ui_dashboard.py  widget.py  widget.ui
examples/table/: app.py
examples/ui/: app.py
helpers/: index.html
search/: search_index.json
src/comet/: estimate.py  (+4 more)
station/: index.html
tests/: conftest.py  helpers.py  test_application.py  test_buffer.py  test_collection.py  test_device.py  test_driver.py  test_driver_corvus_venus1.py  test_driver_cts_itc.py  test_driver_environmentbox.py  test_driver_ers_ac3.py  test_driver_factory.py  test_driver_generic.py  test_driver_hephy_brandbox.py  test_driver_hephy_corvuscontroller.py  test_driver_hephy_environbox.py  test_driver_hephy_pilascontroller.py  test_driver_itk_corvustt.py  test_driver_itk_hydra.py  test_driver_k2400.py  test_driver_k2410.py  test_driver_k2470.py  test_driver_k2657a.py  test_driver_k2700.py  test_driver_k707b.py  test_driver_keithley_k237.py  test_driver_keithley_k2400.py  test_driver_keithley_k2470.py  test_driver_keithley_k2657a.py  test_driver_keithley_k2700.py  test_driver_keithley_k6510.py  test_driver_keithley_k6514.py  test_driver_keithley_k6517b.py  test_driver_keithley_k707b.py  test_driver_keithley_k708b.py  test_driver_keysight_e4980a.py  test_driver_marzhauser_tango.py  test_driver_marzhauser_venus.py  test_driver_marzhauser_venus2.py  test_driver_mbi_tablecontrol.py  (+54 more)
(+179 files in other folders)
