[project]
name = "comet"
description = "Control and Measurement Toolkit"
authors = [
  {name = "Bernhard Arnold", email = "bernhard.arnold@oeaw.ac.at"},
]
readme = "README.md"
license = {text = "GPLv3"}
requires-python = ">=3.8"
dependencies = [
    "PyVISA",
    "PyVISA-py",
    "PyVISA-sim",
    "pyserial",
    "pyusb",
    "numpy",
    "pint",
    "schema",
    "PyYAML",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/hephy-dd/comet/"
Source = "https://github.com/hephy-dd/comet/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/comet/__init__.py"
