[project]
name = "comet"
description = "Control and Measurement Toolkit"
authors = [
  {name = "Bernhard Arnold", email = "bernhard.arnold@oeaw.ac.at"},
]
readme = "README.md"
license = {text = "GPLv3"}
requires-python = ">=3.9"
dependencies = [
    "PyVISA",
    "PyVISA-py",
    "PyVISA-sim",
    "pyserial",
    "pyusb",
    "numpy",
    "pint",
    "schema",
    "PyYAML",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://hephy-dd.github.io/comet/"
Source = "https://github.com/hephy-dd/comet/"

[project.scripts]
comet-emulator = "comet.emulator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/comet/__init__.py"

