[metadata]
name = comet
version = 0.13.2
description = Control and Measurement Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Bernhard Arnold
author_email = bernhard.arnold@oeaw.ac.at
url = https://github.com/hephy-dd/comet
license = GPLv3
classifiers =
    Framework :: PyQt5
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = find:
install_requires =
    PyVISA>=1.10
    PyVISA-py
    PyVISA-sim
    pint>=0.16
    numpy>=1.17
    qutie==1.7.*
    QCharted==1.1.*
include_package_data = True

[options.packages.find]
exclude = tests

[options.package_data]
comet.assets.icons =
    *.ico
    *.svg

[flake8]
ignore = E501
