[metadata]
name = comet
version = attr: comet.__version__
author = Bernhard Arnold
author_email = bernhard.arnold@oeaw.ac.at
description = Control and Measurement Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3

[options]
python_requires = >=3.7
packages = find:
install_requires =
    PyVISA
    PyVISA-py
    PyVISA-sim
    pyserial
    pyusb
    numpy
    pint
    schema
    PyYAML

[options.packages.find]
exclude = tests

[flake8]
ignore = E501

[mypy]

[mypy-pint.*]
ignore_missing_imports = True

[mypy-schema.*]
ignore_missing_imports = True
